Compiler/tests/good/if1.nx
function printa() : int
{
    printn(1);
    return 1;
}

if(printa() && printa())
{
    printn(3);
}