Compiler/tests/bad/function3.nx
function somar(x : int, y : int) : int
{
    return somar(3);
}

